# anki-immersive-api

./: README.md  card_api.drawio  main.py  pyproject.toml  requirements.txt  test.apkg  test.csv  utils.py
routines/: immersive_routine.py
services/: immersive_service.py
templates/: immersive.py
v1/: app.py
v1/modules/: tts.py
v1/routines/: default_routines.py  immersive_routine.py  polyglot_routines.py
v1/services/: default_services.py  immersive_service.py  polyglot_services.py
v1/templates/: __init__.py  default.py  polyglot.py
v1/utils/: __init__.py  errors.py
