[tool.poetry]
name = "anki-immersive-cards-api"
version = "0.1.0"
description = "API to automate the generation of some immersive anki card templates"
authors = ["ritalinux <wedrano1999@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.111.0"
genanki = "0.13.1"
pytube = "15.0.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
